<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="359dp"
        android:layout_height="482dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="-170dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#D50606"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/pass_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toEndOf="@+id/nomb_txt"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_8afdad6829958a978a4a693" />

    <EditText
        android:id="@+id/nomb_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="-5dp"
        android:ems="10"
        android:hint="Usuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/pass_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />



    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="32dp"
        android:background="#FE0000"
        android:onClick="register"
        android:text="Registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="9dp"
        android:background="#FE0000"
        android:onClick="login"
        android:text="Login"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_txt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="188dp"
        android:layout_height="57dp"
        android:layout_marginStart="380dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="198dp"
        android:fontFamily="sans-serif-black"
        android:text="LOGIN"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="72dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="185dp"
        android:fontFamily="sans-serif-black"
        android:text="LOGIN"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_txt" />

    <EditText
        android:id="@+id/pass_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="-20dp"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPersonName|textWebPassword"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomb_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>