<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/resultado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.771" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="362dp"
        android:layout_height="437dp"
        android:contentDescription="@string/estilo"
        app:layout_constraintBottom_toTopOf="@+id/txtTitleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtNotesView"
        app:srcCompat="@drawable/_8afdad6829958a978a4a693" />


    <TextView
        android:id="@+id/txtNotesView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NOTAS"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <TextView
        android:id="@+id/txtTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Titulo"
        android:textColor="#FFFEFE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <TextView
        android:id="@+id/txtTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Texto"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />


    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="214dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName|textAutoComplete"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598" />

    <EditText
        android:id="@+id/txtText"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="214dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName|textAutoComplete"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694" />

    <Button
        android:id="@+id/bttGuardar"
        android:layout_width="130dp"
        android:layout_height="57dp"
        android:background="#FE0000"
        android:clickable="true"
        android:text="Guardar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.779"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

</androidx.constraintlayout.widget.ConstraintLayout>